syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "CinemaGrpc";

package Cinema;

service CinemaGrpcService {
	rpc GetBooking(GetBookingGrpcRequestDTO) returns (GetBookingGrpcReplyDTO);
}

message GetBookingGrpcRequestDTO {
	string bookingId = 1;
}

message GetBookingGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	GetBookingGrpcReplyDataDTO Data = 4;
}

message GetBookingGrpcReplyDataDTO {
	string bookingId = 1;
	string userId = 2;
	string movieId = 3;
	string movieName = 4;
	string startTime = 5;
	string endTime = 6;
	string status = 7;
	string cinemaId = 8;
	string cinema = 9;
	string address = 10;
	int32 roomNumber = 11;
	string roomType = 12;
	string totalPrice = 13;
	repeated GetSeatsBookingGrpc seats = 14;
}

message GetSeatsBookingGrpc {
	string id = 1;
	string label = 2;
	string seatType = 3;
}
